# ATSApi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ATSbackend/: API_INTEGRATION_GUIDE.md  DELIVERY_SUMMARY.md  DEPLOY.md  Dockerfile  MULTI_DOMAIN_IMPLEMENTATION.md  PHASE_2A_COMPLETION.md  PHASE_2B_COMPLETION.md  PHASE_2C_READINESS.md  README.md  SEMANTIC_REFACTOR_SUMMARY.md  docker-compose.yml  main.py  requirements.txt  uvicorn_debug.py
ATSbackend/Data/: clean_ats_dataset.csv  raw_dataset.json  validation.py
ATSbackend/backend/api/: __init__.py  config.py  middleware.py  models.py  routes.py
ATSbackend/backend/embeddings/: embedder.py
ATSbackend/backend/extraction/: ner_extractor.py  semantic_skills.py  skill_extractor.py  skill_ontology.py
ATSbackend/backend/features/: feature_engineer.py
ATSbackend/backend/graph/: skill_graph.py
ATSbackend/backend/matching/: __init__.py  skill_matcher.py
ATSbackend/backend/model/: train_semantic_core.py  (+1 more)
ATSbackend/nginx/: nginx.conf  proxy.conf
backend/: __init__.py
backend/app/: main.py
backend/services/: __init__.py  ats_service.py
debug_scripts/: debug_actual_files.py  debug_extraction.py  debug_full_trace.py  debug_keywords.py  debug_matching.py  debug_semantic.py
frontend/: app.js  index.html  styles.css
src/atsv4/: __init__.py  cli.py  config.py  engine.py  grading.py  keywords.py  llm.py  models.py  parsers.py  sectioning.py  semantic.py  skill_graph_matcher.py
tests/: test_config.py  test_grading.py  test_sectioning.py  test_skill_graph.py  test_tuned_config.py
(+12 files in other folders)
